--- a/index.html
+++ b/index.html
@@ -33,53 +33,81 @@
         </nav>
     </header>
     <main>
-        <section id="gallery">
-            <div class="slider">
-                <div class="slide">
-                    <img class="desktop-only" src="img/1.png" alt="Image 1">
-                    <img class="mobile-only" src="img/1_cut.png" alt="Image 1">
-                </div>
-                <div class="slide">
-                    <img class="desktop-only" src="img/2.png" alt="Image 2">
-                    <img class="mobile-only" src="img/2_cut.png" alt="Image 2">
-                </div>
-                <div class="slide">
-                    <img class="desktop-only" src="img/3.png" alt="Image 3">
-                    <img class="mobile-only" src="img/3_cut.png" alt="Image 3">
-                </div>
-                <div class="slide">
-                    <img class="desktop-only" src="img/4.png" alt="Image 4">
-                    <img class="mobile-only" src="img/4_cut.png" alt="Image 4">
-                </div>
-                <div class="slide">
-                    <img class="desktop-only" src="img/5.png" alt="Image 5">
-                    <img class="mobile-only" src="img/5_cut.png" alt="Image 5">
-                </div>
+        <div class="row">
+            <div class="col-lg-4 desktop-only">
+                <section class="pros">
+                    <h2>Main advantages</h2>
+                    <ul>
+                        <li>Pi&#249; leggero di 2,6 kg</li>
+                        <li>Pi&#249; economico</li>
+                        <li>Pi&#249; adattabile alle diverse carrozzine </li>
+                    </ul>
+                </section>
             </div>
-            <div class="controls">
-                <button class="prev">
-                    < </button>
-                        <div class="dots"></div>
-                        <button class="next">></button>
-            </div>
-        </section>
-        <section id="pros">
-            <h2>Main advantages</h2>
-            <ul>
-                <li>Pi&#249; leggero di 2,6 kg</li>
-                <li>Pi&#249; economico</li>
-                <li>Pi&#249; adattabile alle diverse carrozzine </li>
-            </ul>
-        </section>
 
-        <section id="promotion">
-            <h2>Get the Twist R for a special price</h2>
-            <p>Per un periodo di tempo limitato, puoi ordinare su Klaxon GEST con il tuo account </p>
-            <div style="margin:0 auto; width:fit-content; position:relative;">
-                <button><a href="https://gest.klaxon-klick.com">Order Now</a></button>
-                <button><a href="mailto:info@klaxon-klick.com">Contact us</a></button>
+            <div class="col-lg-5 col-12">
+                <section id="gallery">
+                    <div class="slider">
+                        <div class="slide">
+                            <img class="desktop-only" src="img/1.png" alt="Image 1">
+                            <img class="mobile-only" src="img/1_cut.png" alt="Image 1">
+                        </div>
+                        <div class="slide">
+                            <img class="desktop-only" src="img/2.png" alt="Image 2">
+                            <img class="mobile-only" src="img/2_cut.png" alt="Image 2">
+                        </div>
+                        <div class="slide">
+                            <img class="desktop-only" src="img/3.png" alt="Image 3">
+                            <img class="mobile-only" src="img/3_cut.png" alt="Image 3">
+                        </div>
+                        <div class="slide">
+                            <img class="desktop-only" src="img/4.png" alt="Image 4">
+                            <img class="mobile-only" src="img/4_cut.png" alt="Image 4">
+                        </div>
+                        <div class="slide">
+                            <img class="desktop-only" src="img/5.png" alt="Image 5">
+                            <img class="mobile-only" src="img/5_cut.png" alt="Image 5">
+                        </div>
+                    </div>
+                    <div class="controls">
+                        <button class="prev">
+                            < </button>
+                                <div class="dots"></div>
+                                <button class="next">></button>
+                    </div>
+                </section>
             </div>
-        </section>
+
+            <div class="col-12 mobile-only">
+                <section class="pros">
+                    <h2>Main advantages</h2>
+                    <ul>
+                        <li>Pi&#249; leggero di 2,6 kg</li>
+                        <li>Pi&#249; economico</li>
+                        <li>Pi&#249; adattabile alle diverse carrozzine </li>
+                    </ul>
+                </section>
+            </div>
+
+            <div class="col-lg-3 col-12">
+                <section id="promotion">
+                    <h2>Get the Twist R for a special price</h2>
+                    <p>Per un periodo di tempo limitato, puoi ordinare su Klaxon GEST con il tuo account </p>
+                    <p>Con l'acquisto di:
+                    <ul>
+                        <li>1 Twist R sconto 10%</li>
+                        <li>5 Twist R sconto 15%</li>
+                        <li>10 Twist R sconto 20%</li>
+                    </ul>
+                    </p>
+                    <div style="margin:0 auto; width:fit-content; position:relative;">
+                        <button><a href="https://gest.klaxon-klick.com">Order Now</a></button>
+                        <button><a href="mailto:info@klaxon-klick.com">Contact us</a></button>
+                    </div>
+                </section>
+            </div>
+
+        </div>
 
         <div class="container" style="margin-top:1em;">
             <div class="row">
@@ -104,14 +132,14 @@
                 </div>
                 <div class="col-12 col-lg-6">
                     <div style="width: fit-content; margin: 0 auto; height: 50%;">
-                        <iframe width="356px" height="200px" src="https://www.youtube-nocookie.com/embed/-YOFiO9xKLc" title="YouTube video player"
-                            frameborder="0"
+                        <iframe width="356px" height="200px" src="https://www.youtube-nocookie.com/embed/-YOFiO9xKLc"
+                            title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
                     </div>
                     <div style="width: fit-content; margin: 0 auto; height: 50%;">
-                        <iframe width="356px" height="200px" src="https://www.youtube-nocookie.com/embed/KJwqeR9sMsI" title="YouTube video player"
-                            frameborder="0"
+                        <iframe width="356px" height="200px" src="https://www.youtube-nocookie.com/embed/KJwqeR9sMsI"
+                            title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
                     </div>
