--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 <section class="pros">
                     <h2>Main advantages</h2>
                     <ul>
-                        <li>Pi&#249; leggero di 2,6 kg</li>
-                        <li>Pi&#249; economico</li>
-                        <li>Pi&#249; adattabile alle diverse carrozzine </li>
+                        <li>Weighs 2.6 kg less</li>
+                        <li>Less expensive</li>
+                        <li>Adaptable to a larger variety of wheelchairs</li>
                     </ul>
                 </section>
             </div>
@@ -82,9 +82,9 @@
                 <section class="pros">
                     <h2>Main advantages</h2>
                     <ul>
-                        <li>Pi&#249; leggero di 2,6 kg</li>
-                        <li>Pi&#249; economico</li>
-                        <li>Pi&#249; adattabile alle diverse carrozzine </li>
+                        <li>Weighs 2.6 kg less</li>
+                        <li>Less expensive</li>
+                        <li>Adaptable to a larger variety of wheelchairs</li>
                     </ul>
                 </section>
             </div>
@@ -92,12 +92,14 @@
             <div class="col-lg-3 col-12">
                 <section id="promotion">
                     <h2>Get the Twist R for a special price</h2>
-                    <p>Per un periodo di tempo limitato, puoi ordinare su Klaxon GEST con il tuo account </p>
-                    <p>Con l'acquisto di:
+                    <p>You can order it via your Klaxon GEST account with the following discounts
+                    </p>
+                    <p style="font-size:small;">(valid until 30/09)</p>
+                    <p>By purchasing
                     <ul>
-                        <li>1 Twist R sconto 10%</li>
-                        <li>5 Twist R sconto 15%</li>
-                        <li>10 Twist R sconto 20%</li>
+                        <li>1 Twist R: 10% discount</li>
+                        <li>5 Twist R: 15% discount</li>
+                        <li>10 Twist R: 20% discount</li>
                     </ul>
                     </p>
                     <div style="margin:0 auto; width:fit-content; position:relative;">
@@ -112,22 +114,22 @@
         <div class="container" style="margin-top:1em;">
             <div class="row">
                 <div class="col-12 col-lg-6">
-                    <h2>Principali caratteristiche</h2>
+                    <h2>Main features</h2>
                     <ul>
-                        <li>Leggero e maneggevole. </li>
-                        <li>Pesa solo 6,2 kg senza batteria e 7,6 con batteria. </li>
-                        <li>Adatto per i viaggi in aereo/treno/auto. </li>
-                        <li>Batteria estraibile e adatta per il trasporto in aereo. </li>
-                        <li>Facile da installare. </li>
-                        <li>Facile da collegare/scollegare.</li>
-                        <li>Adatto per carrozzine fisse e pieghevoli. </li>
-                        <li>Fornito con APP KLAXON per gestire tramite smartphone le impostazioni di guida </li>
-                        <li>Guida a spinta assistita o tramite comandi wireless. </li>
-                        <li>Predisposto per la guita con accompagnatore. </li>
-                        <li>Agile, affidabile e si manovra facilmente. </li>
-                        <li>Fornito con una borsa per il suo trasporto </li>
-                        <li>Autonomia che pu&#242; arrivare a 20Km.</li>
-                        <li>Motore potente in salita </li>
+                        <li>Light and manoeuvrable. </li>
+                        <li>Weighs only 6.2 kg without battery and 7.6 kg with battery. </li>
+                        <li>Suitable for travelling by plane/train/car. </li>
+                        <li>Removable battery suitable for air transport. </li>
+                        <li>Easy to install. </li>
+                        <li>Easy to connect/disconnect.</li>
+                        <li>Suitable for rigid and folding wheelchairs. </li>
+                        <li>Supplied with KLAXON APP to manage driving settings via smartphone. </li>
+                        <li>It can be driven with push-assistance or via wireless controls. </li>
+                        <li>Predisposed to be driven by a caregiver. </li>
+                        <li>Agile, reliable and easily manoeuvrable. </li>
+                        <li>Supplied with a bag for its transportation. </li>
+                        <li>Range up to 20Km. </li>
+                        <li>Powerful engine even for driving uphill. </li>
                     </ul>
                 </div>
                 <div class="col-12 col-lg-6">
