--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div id="title-container" style="width: 100%;">
             <h1 style="margin-bottom:0;">Twist R</h1>
-            <h2 style="margin-top:0;">Special Launch Promotion</h2>
+            <h2 style="margin-top:0; display:none;">Special Launch Promotion</h2>
         </div>
 
         <nav>
@@ -42,9 +42,21 @@
                         <li>Less expensive</li>
                         <li>Adaptable to a larger variety of wheelchairs</li>
                     </ul>
+
+                    <div style="margin-top:3em;">
+                        <p><u>Catalogue available soon</u>
+                        </p>
+
+                        </p>
+                        <button class="promotionButton"><a  href="https://www.klaxon-klick.com/en/klick-store/">Contact your
+                                distributor</a></button>
+                        
+                    </div>
+
+
                 </section>
             </div>
-
+            <div class="col-lg-1"></div>
             <div class="col-lg-5 col-12">
                 <section id="gallery">
                     <div class="slider">
@@ -82,29 +94,33 @@
                 <section class="pros">
                     <h2>Main advantages</h2>
                     <ul>
-                        <li>Weighs 2.6 kg less</li>
+                        <li>Weighs 1.3 kg less</li>
                         <li>Less expensive</li>
                         <li>Adaptable to a larger variety of wheelchairs</li>
                     </ul>
+
+                    <div style="margin-top:3em;">
+                        <p><u>Catalogue available soon</u>
+                        </p>
+
+                        </p>
+                        <button class="promotionButton"><a  href="https://www.klaxon-klick.com/en/klick-store/">Contact your
+                                distributor</a></button>
+                        
+                    </div>
                 </section>
             </div>
 
-            <div class="col-lg-3 col-12">
+            <div class="col-lg-3 col-12" style="display:none;">
                 <section id="promotion">
-                    <h2>Get the Twist R for a special price</h2>
-                    <p>You can order it via your Klaxon GEST account with the following discounts
+
+                    <p>Catalogue available soon
                     </p>
-                    <p style="font-size:small;">(valid until 30/09)</p>
-                    <p>By purchasing
-                    <ul>
-                        <li>1 Twist R: 10% discount</li>
-                        <li>5 Twist R: 15% discount</li>
-                        <li>10 Twist R: 20% discount</li>
-                    </ul>
+
                     </p>
                     <div style="margin:0 auto; width:fit-content; position:relative;">
-                        <button><a href="https://gest.klaxon-klick.com">Order Now</a></button>
-                        <button><a href="mailto:info@klaxon-klick.com">Contact us</a></button>
+                        <button><a href="https://www.klaxon-klick.com/en/klick-store/">Contact your
+                                distributor</a></button>
                     </div>
                 </section>
             </div>
